--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32159,6 +32159,36 @@ select {
   text-align: left;
 }
 
+h1, .h1 {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+}
+
+h2, .h2 {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 700;
+}
+
+h3, .h3 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+}
+
+h4, .h4 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+}
+
+h5, .h5 {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+}
+
 .front h1, .front .h1 {
   margin-bottom: 1rem;
   font-size: 2.25rem;
