--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,55 +17,27 @@
 
 h1,
 .h1 {
-	@apply text-4xl font-bold;
+	@apply text-4xl font-bold mb-4;
 }
 
 h2,
 .h2 {
-	@apply text-3xl font-bold;
+	@apply text-3xl font-bold mb-3;
 }
 
 h3,
 .h3 {
-	@apply text-2xl font-bold;
+	@apply text-2xl font-bold mb-2;
 }
 
 h4,
 .h4 {
-	@apply text-xl font-bold;
+	@apply text-xl font-bold mb-2;
 }
 
 h5,
 .h5 {
-	@apply text-lg font-bold;
-}
-
-
-.front {
-	h1,
-	.h1 {
-		@apply mb-4;
-	}
-	
-	h2,
-	.h2 {
-		@apply mb-3;
-	}
-	
-	h3,
-	.h3 {
-		@apply mb-2;
-	}
-	
-	h4,
-	.h4 {
-		@apply b-2;
-	}
-	
-	h5,
-	.h5 {
-		@apply b-2;
-	}
+	@apply text-lg font-bold mb-2;
 }
 
 p {
